Made the simulated data true if sensor is not present and also changed the LEDpin to 7

--- a/raspberrypi-client/config.json
+++ b/raspberrypi-client/config.json
@@ -1,8 +1,8 @@
 {
-  "simulatedData": false,
+  "simulatedData": true,
   "interval": 2000,
   "deviceId": "Raspberry Pi Node",
-  "LEDPin": 5,
+  "LEDPin": 7,
   "messageMax": 256,
   "credentialPath": "~/.iot-hub",
   "temperatureAlert": 30,
